text align fix of slider

--- a/src/Components/Slider.css
+++ b/src/Components/Slider.css
@@ -46,6 +46,11 @@
     color: #fff;
     border-radius: 5px;
     font-size: 25px;
+    text-align: center;
+}
+
+.alice-carousel__prev-btn{
+    text-align: center!important;
 }
 
 @media screen and (max-width: 400px) {
